cart-spring-boot/xebialabs/package/service-cart.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cart
    application: coolstore
    component: cart
  name: cart
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: cart
