cart-spring-boot/xebialabs/package/route-cart.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    application: coolstore
    component: cart
  name: cart
spec:
  to:
    kind: Service
    name: cart
    weight: 100
